zero-schema-macros/tests/ui/fail/00_removed_derive.rs
use zero_schema_macros::ZeroSchema;

#[derive(ZeroSchema)]
struct Legacy {
    value: u8,
}

fn main() {}
